# foxy_docker

./: .bashrc_foxy  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fastdds_noshm.xml
bags/foxy_test_20260501_173433/: foxy_test_20260501_173433_0.db3  metadata.yaml
bags/rosbag_20260501_173528/: metadata.yaml  rosbag_20260501_173528_0.db3
bags/rosbag_20260501_175303/: metadata.yaml  rosbag_20260501_175303_0.db3
bags/rosbag_20260501_180349/: metadata.yaml  rosbag_20260501_180349_0.db3
bags/rosbag_20260501_184112/: metadata.yaml  rosbag_20260501_184112_0.db3
bags/rosbag_20260501_204210/: metadata.yaml  rosbag_20260501_204210_0.db3
scripts/: record_rosbag.sh  test_cl_figure8.sh  test_cl_figure8_unified.sh  test_cl_sequence.sh  test_cl_square.sh  test_cl_square_unified.sh  test_figure8.sh  test_ol_figure8.sh  test_ol_figure8_unified.sh  test_ol_square.sh  test_ol_square_unified.sh  test_sequence.sh
src/bt_msgs/: CMakeLists.txt  package.xml
src/bt_msgs/action/: ArcDrive.action  Drive.action  FigureEight.action  MoveToTarget.action  OpenLoopDrive.action  RotateDegrees.action  Square.action
src/turtlesim_logic/: package.xml  setup.cfg  setup.py
src/turtlesim_logic/config/: turtlesim_params.yaml
src/turtlesim_logic/launch/: turtlesim_logic.launch.py
src/turtlesim_logic/resource/: turtlesim_logic
src/turtlesim_logic/turtlesim_logic/: arc_drive_node.py  closed_loop_drive_node.py  closed_loop_shape_node.py  move_to_target_node.py  open_loop_drive_node.py  open_loop_shape_node.py  rotate_turtle_node.py
(+3 files in other folders)
