<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_logic</name>
  <version>0.0.0</version>
  <description>Foxy test logic</description>
  <maintainer email="kotantu@todo.todo">kotantu</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>bt_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
